	  STM32F40xxx family of MCUs.
	* configs/stm3240g-eval:  Add framework for the STMicro STM3240G-EVAL
	  board.
	* include/sys/types.h:  wchar_t is a builtin type in C++ and its
	  declaration can cause errors with certain C++ compilers.
	* sched/sig_timedwait.c:  Fix signal handling when the returned info
	  is NULL.  Before this change, it would derefence a NULL pointer
	  in this case.
	* graphics/nxfonts/nxfonts_sans17x22.h and nxfonts_sans20x26.h:  Add
	  some very small sans serif fonts.
	* graphics/nxfonts/nxfonts_sans17x23b.h and nxfonts_sans20x27b.h:  Add
	  corresponding sans serif bold fonts.
	* drivers/input/ads7843e.c and tsc2007.c:  Fix some errors in the poll
	  setup error checking that was cloned into both drivers.
	* sched/mq_notify.c:  Set errno appropriately on failures.  There are
	  still several message queue functions that do not set errno!
	* arch/arm/src/stm32: Fixes to several STM32F40xxx files (contributed by
	  Mikhail Bychek).
	* configs/stm3210e-eval/src/up_lcd.c:  Fix banding problem on the R61580
	  LCD
	* configs/stm3240g-eval/ostest:  The basic STM32F40xx bringup is functional
	  (11/12/06) for the STM3240G-EVAL board and passes the OS test.
	* configs/stm3240g-eval/nsh:  Adds a NuttShell (NSH) configure for the
	  STM3240G-EVAL board.

6.13 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32f40xxx_dma.c:  Add DMA support for the STM32 F4
	  family (untested on initial check-in)
	* arch/arm/src/armv7-m/up_fpu.c:  Add logic for saving an restoring VFP
	  floating point registers on context switches (but also disable the FPU
	  because CodeSourcery doesn't support hard flowing point!)
	* arch/arm/src/stm32/chip/stm32_eth.h:  Add Ethernet register definitions
	  for the STM32 F4.
	* arch/arm/srcm/stm32/stm32_eth.c:  Adds an Ethernet driver for the STM32 F4.
	* arch/arm/srcm/stm32/stm32_dac.c and stm32_adc.c: "Skeleton" files for STM32
	  DAC and ADC drivers.  The actual logic will come later.